# frogfs

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  build-image.py  component.mk  config.yaml.example  default_config.yaml  esp_espfs.c  espfs.c  espfs.h  espfs.yaml.example  espfs.yaml.project.example  espfs_defaults.yaml  frogfs.code-workspace  frogfs_defaults.yaml  frogfs_example.yaml  idf_component.yml  image_espfs.h  meson.build  meson_options.txt  requirements.txt
.github/workflows/: upload_component.yml
cmake/: files.cmake  functions.cmake  idf.cmake  include.cmake  standalone.cmake
docs/: Doxyfile  Makefile  api-reference.rst  conf.py  examples.rst  gen-dxd.py  index.rst  requirements.txt  utils.py
docs/api-reference/: bare.rst  fh.rst  format.rst  fs.rst  index.rst  route.rst  vfs.rst
docs/readme/: index.rst
examples/browser_src/: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.js
examples/browser_src/src/: App.vue
examples/browser_src/src/components/: FolderTree.vue  FolderTreeBranch.vue  ModalDialog.vue  ModalIframe.vue
examples/clockwise/: .gitignore  CMakeLists.txt  frogfs.yaml  sdkconfig.defaults
examples/clockwise/main/: CMakeLists.txt  api.c  httpd.c  main.c  network.c  storage.c
examples/files/: index.html  test.html  test.txt
examples/files/browser/: index.html
examples/files/browser/assets/: index-28e8c1c0.js  index-b36a6db2.css  index-d14fff88.js
examples/files/hello/: Makefile  main.c
examples/files/sekrut/: index.html
examples/httpd/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/httpd/main/: CMakeLists.txt  Kconfig.projbuild  http_server.c  main.c
examples/standalone/: CMakeLists.txt  frogfs.yaml  main.c
include/: espfs.h  espfs_image.h  espfs_vfs.h
include/frogfs/: format.h  frogfs.h  frogfs_format.h  ramfs.h  route.h  vfs.h
include/libespfs/: espfs.h  espfs_format.h  format.h  image.h  vfs.h
mkespfsimage/: CMakeLists.txt  Makefile  main.c  mkespfsimage
src/: decomp_deflate.c  decomp_heatshrink.c  decomp_miniz.c  decomp_miniz_deflate.c  decomp_raw.c  decomp_zlib.c  decomp_zlib_deflate.c  espfs.c  espfs_format.h  espfs_image.c  espfs_priv.h  espfs_vfs.c  frogfs.c  frogfs_config.h  frogfs_format.h  frogfs_priv.h  image.espfs.ld  log.h  ramfs.c  route.c  vfs.c
tools/: bin2c.py  build-image.py  compress-deflate.py  compress-heatshrink.py  frogfs.js  frogfs.py  mkespfsimage.py  mkfrogfs.py  pathlist.py  preprocess.py  transform-babel-convert.js  transform-babel-minify.js  transform-deflate.py  transform-html-minifier.js  transform-uglify-js.js  transform-uglifycss.js  zeroify.py
tools/test/: CMakeLists.txt  main.c
